# ytdlp-gui

./: LICENSE  README.md  pyproject.toml
src/ytdlpg/: __main__.py  main.py  manager.py  options.py
