[project]
name = "ytdlp-gui"
version = "1.0.0"
description = "A beautiful GUI for YT-DLP using Flet"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "flet[all]>=0.27.6",
    "yt-dlp>=2025.3.31",
]

[project.scripts]
ytdlpg = "ytdlpg.main:python_main"

[build-system]
requires = ["setuptools>=79.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
