[tool.poetry]
name = "ytdlp-gui"
version = "1.1.0"
description = ""
authors = ["Billy <billydevbusiness@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ytdlpg", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2025.11.12"
flet = {extras = ["all"], version = "^0.28.3"}


[tool.poetry.scripts]
ytdlpg = "ytdlpg.main:python_main"
ytg = "ytdlpg.main:python_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
